examples/v0.5/errors/unary_not_non_boolean.nova
print(!123)

// Expected Error:
// Operand must be boolean.